feat: add adaptive markup for big monitors

--- a/src/components/variables.pug
+++ b/src/components/variables.pug
@@ -172,22 +172,34 @@
 -
     instructors = [
         {
-            name: "Василий Евгеньевич",
+            name: "Ирина Васильевна",
             age: "33 года",
-            description: "“С удовольствием поделюсь опытом!”",
-            imageSrc: "",
+            imageSrc: "assets/images/instructors/instructor-1.webp",
         },
         {
             name: "Дарья Александровна",
             age: "32 года",
-            description: "“Индивидуальный подход к каждому курсанту.”",
-            imageSrc: "",
+            imageSrc: "assets/images/instructors/instructor-2.webp",
+        },
+        {
+            name: "Василий Евгеньевич",
+            age: "33 лет",
+            imageSrc: "assets/images/instructors/instructor-3.webp",
         },
         {
             name: "Семен Викторович",
             age: "35 лет",
-            description: "“Разовьем и отточим ваши навыки вождения.”",
-            imageSrc: "",
+            imageSrc: "assets/images/instructors/instructor-4.webp",
+        },
+        {
+            name: "Владислав Александрович",
+            age: "37 лет",
+            imageSrc: "assets/images/instructors/instructor-5.webp",
+        },
+        {
+            name: "Александр Ростиславович",
+            age: "36 лет",
+            imageSrc: "assets/images/instructors/instructor-6.webp",
         }
     ]
 
@@ -255,3 +267,91 @@
             imageSrc: "../assets/images/cars/car-6.webp"
         },
     ]
+
+-
+    autoArea =
+            [
+                {
+                    imageSrc: "../assets/images/photos/autoarea-1.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/autoarea-2.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/autoarea-3.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/autoarea-4.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/autoarea-5.webp"
+                }
+            ]
+
+-
+    motoArea =
+            [
+                {
+                    imageSrc: "../assets/images/photos/motoarea-1.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/motoarea-2.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/motoarea-3.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/motoarea-4.webp"
+                },
+                {
+                    imageSrc: "../assets/images/photos/motoarea-5.webp"
+                }
+            ]
+
+-
+    reviews =
+            [
+                {
+                    name: "Андрей",
+                    age: "37 лет",
+                    description: "Позвонил, чтобы узнать, сколько стоит сдать на права и как долго придется учиться. Оказалось, теорию можно осваивать дистанционно, а практика начинается сразу же. Мне все подошло, цены и условия в автошколе адекватные, уже езжу с правами.",
+                    photoSrc: "../assets/images/reviews/review-1.webp"
+                },
+                {
+                    name: "Анатолий",
+                    age: "42 года",
+                    description: "В процессе обучения на категорию Б возникла необходимость поменять площадку для занятий. Сделали без проблем! В этой автошколе чувствуется подход “все для клиента”.",
+                    photoSrc: "../assets/images/reviews/review-2.webp"
+                },
+                {
+                    name: "Михаил",
+                    age: "28 года",
+                    description: "Хорошая автошкола. Компетентные сотрудники по теории и вождению. Нормальные машины. Много филиалов — не нужно пилить через весь город: вышел с работы — 2 минуты и ты на автодроме. По цене вполне подъемно. Сдал на права категории В легко, отучился год назад.",
+                    photoSrc: "../assets/images/reviews/review-3.webp"
+                },
+                {
+                    name: "Кирилл",
+                    age: "23 года",
+                    description: "Классный формат обучения. Удобно, что теория проходит дистанционно. Если не отлынивать, все получается быстро. Не заметил, как учеба в автошколе закончилась. Уже 3 месяца с правами!",
+                    photoSrc: "../assets/images/reviews/review-4.webp"
+                },
+                {
+                    name: "Софья",
+                    age: "19 лет",
+                    description: "Здесь реально крутые преподаватели и инструкторы! Ирина Васильевна, ваши уроки вождения просто незабываемы! Мое мнение — это лучшая автошкола!",
+                    photoSrc: "../assets/images/reviews/review-5.webp"
+                },
+                {
+                    name: "Елена",
+                    age: "24 года",
+                    description: "Отличное качество обучения, хорошие преподаватели и очень тактичные инструкторы! Большой плюс — можно нанять инструктора по вождению, чтобы позаниматься дополнительно. Мне это очень помогло. Сдала экзамен в ГИБДД с первого раза.",
+                    photoSrc: "../assets/images/reviews/review-6.webp"
+                },
+                {
+                    name: "Маргарита",
+                    age: "31 год",
+                    description: "Адекватная цена обучения в автошколе, хороший автопарк и преподаватели-профессионалы. Мне было комфортно учиться водить — отдельное спасибо Семену Викторовичу за терпение и подробный разбор всех ошибок.",
+                    photoSrc: "../assets/images/reviews/review-7.webp"
+                }
+            ]
+
