--- a/src/styles/components/main/_autopark.sass
+++ b/src/styles/components/main/_autopark.sass
@@ -1,1 +1,7 @@
 @import src/styles/components/variables
+
+#autopark
+  .carousel-item
+    .carousel-photo
+      width: 638px
+      height: 481px
