--- a/src/styles/components/main/_firstScreen.sass
+++ b/src/styles/components/main/_firstScreen.sass
@@ -19,10 +19,10 @@
 
   .title
     font-family: "Roboto Slab", sans-serif
-    margin-block: 60px 33px
+    margin-block: 60px 3.3rem
     font-size: 7.4rem
 
   .automoto__description
     font-size: 1.6rem
-    line-height: 30px
-    margin-bottom: 64px
+    line-height: 3rem
+    margin-bottom: 6.4rem
