--- a/src/styles/components/main/_instructors.sass
+++ b/src/styles/components/main/_instructors.sass
@@ -10,7 +10,7 @@
 
 .instructors__li
   background: rgba(255, 255, 255, 0.9)
-  width: 280px
+  width: max(280px, 30%)
 
 .instructor__image
   width: 100%
