--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,6 +1,6 @@
 header#header
     .container.d-flex.h-100.justify-content-between
-        .col-6.h-100.d-flex.align-items-center
+        .col-xl-5.col-4.h-100.d-flex.align-items-center
             img.header__logo(src=require("../assets/images/logo.webp"), alt="Лого")
         nav.navbar.navbar-expand-lg.navbar-light
             button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
