--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -20,8 +20,8 @@ mixin accordionItem(index, question, answer)
             .accordion-body= answer
 
 mixin carousel(cards, index, type, options)
-    .carousel.slide(id=`carouselIndicators-${index}` data-bs-ride="true")
-        if options.isIndicate
+    .carousel.slide(id=`carouselIndicators-${index}` data-bs-ride="true" class= options.isFaded ? "carousel-fade": "")
+        if options.isIndicated
             .carousel-indicators
                 each _, count in cards
                     button(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide-to=count class=!count ? 'active' : '' aria-current="true" aria-label=`Slide ${count + 1}`)
@@ -34,19 +34,28 @@ mixin carousel(cards, index, type, options)
                         when "review"
                             +carouselReview(card, options)
                         default
-                            div
+                            _
         if options.isControlled
-            button.carousel-control-prev(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="prev")
-                span.carousel-control-prev-icon(aria-hidden="true")
-                span.visually-hidden <
-            button.carousel-control-next(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="next")
-                span.carousel-control-next-icon(aria-hidden="true")
-                span.visually-hidden >
+            .carousel-control-wrapper
+                button.carousel-control-prev(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="prev")
+                    span
+                        svg(width="81" height="8" viewBox="0 0 81 8" fill="none" xmlns="http://www.w3.org/2000/svg")
+                            path(d="M0.646446 3.64645C0.451187 3.84171 0.451187 4.15829 0.646446 4.35355L3.82843 7.53553C4.02369 7.7308 4.34027 7.7308 4.53554 7.53553C4.7308 7.34027 4.7308 7.02369 4.53554 6.82843L1.70711 4L4.53554 1.17157C4.7308 0.976311 4.7308 0.659728 4.53554 0.464466C4.34027 0.269204 4.02369 0.269204 3.82843 0.464466L0.646446 3.64645ZM80 3.5L1 3.5V4.5L80 4.5V3.5Z" fill="black")
+                    span.visually-hidden <
+                button.carousel-control-next(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="next")
+                    span(aria-hidden="true")
+                        svg(width="81" height="8" viewBox="0 0 81 8" fill="none" xmlns="http://www.w3.org/2000/svg")
+                            path(d="M80.3536 4.35355C80.5488 4.15829 80.5488 3.84171 80.3536 3.64645L77.1716 0.464466C76.9763 0.269204 76.6597 0.269204 76.4645 0.464466C76.2692 0.659728 76.2692 0.976311 76.4645 1.17157L79.2929 4L76.4645 6.82843C76.2692 7.02369 76.2692 7.34027 76.4645 7.53553C76.6597 7.7308 76.9763 7.7308 77.1716 7.53553L80.3536 4.35355ZM0 4.5H80V3.5H0V4.5Z" fill="black")
+                    span.visually-hidden >
 
 mixin carouselPhoto(card, options)
     img.carousel-photo(src=require(card.imageSrc) alt=card.name class= options ? options.classes: '')
     if options.isDescripted
         p.carousel-description.text-center= card.name
 
-mixin carouselReview(cards)
-    div
+mixin carouselReview(card)
+    .carousel-review
+        img.carousel-review-image(src=require(card.photoSrc) alt=card.name)
+        .carousel-review-content
+            p.carousel-review-title= `${card.name}, ${card.age}`
+            p.carousel-review-description= card.description
