--- a/src/styles/components/_variables.sass
+++ b/src/styles/components/_variables.sass
@@ -6,4 +6,19 @@ $light-grey: #464646
 $lighter-grey: #868686
 $white: #FFFFFF
 
+//media
+$xxl: 1399px
+$xl: 1199px
+$lg: 991px
+$md: 767px
+$sm: 575px
+
+//header
 $header-height: 45px
+
+//autostages
+$autostages-inline-gap: 122px !default
+$autostages-block-gap: 52px !default
+
+//photos
+$photos-li-inline-padding: 50px
