--- a/src/styles/components/main/_branches.sass
+++ b/src/styles/components/main/_branches.sass
@@ -11,8 +11,8 @@
   align-items: center
   grid-template-columns: repeat(4, 1fr)
   grid-auto-rows: minmax(max-content, auto)
-  gap: 95px 30px
-  margin: 95px auto 0
+  gap: 9.5rem 3rem
+  margin: 9.5rem auto 0
 
 .branches__li
   margin-block: calc(10px - 50%)
@@ -27,7 +27,15 @@
     color: $black
 
   .branch__icon
-    width: 30px
-    height: 45px
-    margin-right: 10px
+    width: 3rem
+    height: 4.5rem
+    margin-right: 1rem
     filter: invert(67%) sepia(89%) saturate(7492%) hue-rotate(349deg) brightness(84%) contrast(96%)
+
+@media screen and (max-width: $xl)
+  .branches__ul
+    grid-template-columns: repeat(3, 1fr)
+
+@media screen and (max-width: $md)
+  .branches__ul
+    grid-template-columns: repeat(2, 1fr)
