--- a/src/styles/components/main/_whyWe.sass
+++ b/src/styles/components/main/_whyWe.sass
@@ -33,3 +33,11 @@
 
     .why-we__description
       font-size: 1.4rem
+
+@media screen and (max-width: $md)
+  #why-we
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 55.21%), url("../../../assets/images/background/why-we-bg.webp") center
+    background-size: cover
+
+  .why-we__ul
+    grid-template-columns: repeat(1, 324px)
