--- a/src/components/variables.pug
+++ b/src/components/variables.pug
@@ -12,27 +12,27 @@
     navLinks = [
         {
             name: "Главная",
-            href: ""
+            href: "#automoto"
         },
         {
             name: "Цены",
-            href: ""
+            href: "#categories"
         },
         {
             name: "Филиалы",
-            href: ""
+            href: "#branches"
         },
         {
             name: "Как проходит обучение",
-            href: ""
+            href: "#auto-stages"
         },
         {
             name: "Отзывы",
-            href: ""
+            href: "#reviews"
         },
         {
             name: "Акции",
-            href: ""
+            href: "#events"
         }
     ]
 
