--- a/src/styles/components/main/_autoStages.sass
+++ b/src/styles/components/main/_autoStages.sass
@@ -52,7 +52,7 @@
 
   #auto-stages
     background: url("../../../assets/images/background/conus-bg.webp") 5% 20% no-repeat, url("../../../assets/images/background/stages-car-bg.webp") 100% 100% no-repeat
-    background-size: 40%, 50%
+    background-size: 242px, 476px
 
   .stages__ul
     gap: $autostages-block-gap $autostages-inline-gap
