--- a/src/styles/components/main/_branches.sass
+++ b/src/styles/components/main/_branches.sass
@@ -23,8 +23,9 @@
   font-size: 2.4rem
   line-height: 2.8rem
   color: $black
+  transition: color .2s
   &:hover
-    color: $black
+    color: $dark-red
 
   .branch__icon
     width: 3rem
