--- a/src/styles/components/main/_categories.sass
+++ b/src/styles/components/main/_categories.sass
@@ -2,7 +2,7 @@
 
 #categories
   background: url("../../../assets/images/background/auto-bg.webp") no-repeat 100% center, url("../../../assets/images/background/moto-bg.webp") no-repeat 0 center
-  background-size: contain
+  background-size: 35%
 
 .categories__ul
   margin: 60px -15px 70px
