--- a/src/styles/components/main/_whyWe.sass
+++ b/src/styles/components/main/_whyWe.sass
@@ -8,9 +8,9 @@
   display: grid
   width: fit-content
   align-items: end
-  grid-template-columns: repeat(2, 324px)
+  grid-template-columns: repeat(2, 32.4rem)
   grid-auto-rows: minmax(max-content, auto)
-  gap: 40px 25px
+  gap: 4rem 2.5rem
   margin-inline: auto
   margin-top: 50px
 
