--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,11 +1,27 @@
+.modal.fade#navbarModal(tabindex="-1" aria-hidden="true")
+    .modal-dialog.modal-dialog-centered.modal-sm.d-flex.justify-content-center
+        .modal-content.w-75
+            .modal-header
+                button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
+                    svg(width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg")
+                        rect(width="26.4114" height="1.82147" transform="matrix(0.707105 -0.707108 0.707105 0.707108 0.036377 18.7119)" fill="#850102")
+                        rect(width="26.4114" height="1.82147" transform="matrix(0.707105 0.707108 -0.707105 0.707108 1.28796 0)" fill="#850102")
+            .modal-body
+                ul.navbar-nav.w-100.justify-content-around.align-items-center
+                    each link in navLinks
+                        li.navigation__link.nav-item(data-bs-dismiss="modal" data-bs-target="#navbarModal" data-bs-toggle="modal")
+                            a.nav-link(href=link.href class= link.active ? "active": "")= link.name
 header#header
     .container.d-flex.h-100.justify-content-between
         .col-xl-5.col-4.h-100.d-flex.align-items-center
             img.header__logo(src=require("../assets/images/logo.webp"), alt="Лого")
         nav.navbar.navbar-expand-lg.navbar-light
-            button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
-                span.navbar-toggler-icon
+            button.navbar-toggler(type="button", data-bs-toggle="modal", data-bs-target="#navbarModal", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
+                svg.navbar-svg(width="56" height="26" viewBox="0 0 56 26" fill="none"
+                    xmlns="http://www.w3.org/2000/svg")
+                    line(y1="2.5" x2="56" y2="2.5" stroke="black" stroke-width="5")
+                    line(y1="23.5" x2="56" y2="23.5" stroke="black" stroke-width="5")
             .collapse.navbar-collapse#navbarNav
                 .navbar-nav
                     each link in navLinks
-                            a.nav-link.nav-item(href=link.href, class= link.active ? "active" : "")= link.name
+                        a.nav-link.nav-item(href=link.href, class= link.active ? "active" : "")= link.name
