--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -20,7 +20,7 @@ mixin accordionItem(index, question, answer)
             .accordion-body= answer
 
 mixin carousel(cards, index, type, options)
-    .carousel.slide(id=`carouselIndicators-${index}` data-bs-ride="true" class= options.isFaded ? "carousel-fade": "")
+    .carousel.slide(id=`carouselIndicators-${index}` data-bs-target=`#carouselIndicators-${index}` data-bs-ride="true" class= options ? options.carouselClasses: "")
         if options.isIndicated
             .carousel-indicators
                 each _, count in cards
@@ -33,6 +33,8 @@ mixin carousel(cards, index, type, options)
                             +carouselPhoto(card, options)
                         when "review"
                             +carouselReview(card, options)
+                        when "instructor"
+                            +carouselInstructor(card, options)
                         default
                             _
         if options.isControlled
@@ -40,22 +42,29 @@ mixin carousel(cards, index, type, options)
                 button.carousel-control-prev(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="prev")
                     span
                         svg(width="81" height="8" viewBox="0 0 81 8" fill="none" xmlns="http://www.w3.org/2000/svg")
-                            path(d="M0.646446 3.64645C0.451187 3.84171 0.451187 4.15829 0.646446 4.35355L3.82843 7.53553C4.02369 7.7308 4.34027 7.7308 4.53554 7.53553C4.7308 7.34027 4.7308 7.02369 4.53554 6.82843L1.70711 4L4.53554 1.17157C4.7308 0.976311 4.7308 0.659728 4.53554 0.464466C4.34027 0.269204 4.02369 0.269204 3.82843 0.464466L0.646446 3.64645ZM80 3.5L1 3.5V4.5L80 4.5V3.5Z" fill="black")
+                            path(d="M0.646446 3.64645C0.451187 3.84171 0.451187 4.15829 0.646446 4.35355L3.82843 7.53553C4.02369 7.7308 4.34027 7.7308 4.53554 7.53553C4.7308 7.34027 4.7308 7.02369 4.53554 6.82843L1.70711 4L4.53554 1.17157C4.7308 0.976311 4.7308 0.659728 4.53554 0.464466C4.34027 0.269204 4.02369 0.269204 3.82843 0.464466L0.646446 3.64645ZM80 3.5L1 3.5V4.5L80 4.5V3.5Z" fill=options.controlWhite ? "white": "black")
                     span.visually-hidden <
                 button.carousel-control-next(type="button" data-bs-target=`#carouselIndicators-${index}` data-bs-slide="next")
                     span(aria-hidden="true")
                         svg(width="81" height="8" viewBox="0 0 81 8" fill="none" xmlns="http://www.w3.org/2000/svg")
-                            path(d="M80.3536 4.35355C80.5488 4.15829 80.5488 3.84171 80.3536 3.64645L77.1716 0.464466C76.9763 0.269204 76.6597 0.269204 76.4645 0.464466C76.2692 0.659728 76.2692 0.976311 76.4645 1.17157L79.2929 4L76.4645 6.82843C76.2692 7.02369 76.2692 7.34027 76.4645 7.53553C76.6597 7.7308 76.9763 7.7308 77.1716 7.53553L80.3536 4.35355ZM0 4.5H80V3.5H0V4.5Z" fill="black")
+                            path(d="M80.3536 4.35355C80.5488 4.15829 80.5488 3.84171 80.3536 3.64645L77.1716 0.464466C76.9763 0.269204 76.6597 0.269204 76.4645 0.464466C76.2692 0.659728 76.2692 0.976311 76.4645 1.17157L79.2929 4L76.4645 6.82843C76.2692 7.02369 76.2692 7.34027 76.4645 7.53553C76.6597 7.7308 76.9763 7.7308 77.1716 7.53553L80.3536 4.35355ZM0 4.5H80V3.5H0V4.5Z" fill=options.controlWhite ? "white": "black")
                     span.visually-hidden >
 
 mixin carouselPhoto(card, options)
-    img.carousel-photo(src=require(card.imageSrc) alt=card.name class= options ? options.classes: '')
+    img.carousel-photo(src=require(card.imageSrc) alt=card.name class= options ? options.itemClasses: '')
     if options.isDescripted
         p.carousel-description.text-center= card.name
 
 mixin carouselReview(card)
-    .carousel-review
+    .carousel-review.d-flex.align-items-center.flex-md-row.flex-column.justify-content-center
         img.carousel-review-image(src=require(card.photoSrc) alt=card.name)
         .carousel-review-content
-            p.carousel-review-title= `${card.name}, ${card.age}`
+            p.carousel-review-title.text-md-start.text-center= `${card.name}, ${card.age}`
             p.carousel-review-description= card.description
+
+mixin carouselInstructor(card, options)
+    .instructors__li.mx-auto
+        img.instructor__image(src=require("../" + card.imageSrc), alt=card.name + " фото")
+        .instructor__content
+            h5.text-center.instructor__name= card.name
+            p.text-center.instructor__age= card.age
