--- a/src/styles/components/_footer.sass
+++ b/src/styles/components/_footer.sass
@@ -11,12 +11,18 @@
 .contacts__li
   margin-bottom: 5px
 
-.contacts__li,
-.contacts__link
+.contacts__li
   font-family: 'Montserrat', sans-serif
   font-size: 14px
   font-weight: 500
   color: $black
+  text-decoration: none
+
+.contacts__link
+  font-family: 'Montserrat', sans-serif
+  font-size: 14px
+  font-weight: 500
+  color: $dark-grey
   text-decoration: none
   &:hover
     color: $black
