--- a/src/styles/components/main/_faq.sass
+++ b/src/styles/components/main/_faq.sass
@@ -39,14 +39,23 @@
   color: $white
   line-height: 1.5rem
 
-@media screen and (max-width: 991px)
+@media screen and (max-width: $lg)
+  .accordion-item
+    width: 60vw
+
   .accordion-item
     padding: 10px 20px
 
-@media screen and (max-width: 768px)
+@media screen and (max-width: $md)
+  .accordion-item
+    width: 70vw
+
   .accordion-item
     padding: 10px 20px
 
-@media screen and (max-width: 575px)
+@media screen and (max-width: $sm)
+  .accordion-item
+    width: 90vw
+
   .accordion-question
     width: 80%
