--- a/src/styles/components/main/_reviews.sass
+++ b/src/styles/components/main/_reviews.sass
@@ -1,1 +1,46 @@
 @import src/styles/components/variables
+
+.carousel-review
+  width: 638px
+  height: auto
+  padding: 20px
+  background: $white
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+  margin: 0 auto
+
+  &-image
+    height: 180px
+    width: auto
+    box-sizing: content-box
+    padding: 10px
+    border: 1px solid #000000
+    margin-right: 20px
+
+  &-title
+    font-family: 'Montserrat', sans-serif
+    font-weight: 500
+    font-size: 1.6rem
+    margin-bottom: 16px
+
+  &-description
+    font-family: 'Montserrat', sans-serif
+    font-weight: 400
+    font-size: 1.6rem
+    line-height: 20px
+
+@media screen and (max-width: $md)
+  .carousel-review
+    width: 311px
+    height: 454px
+
+    &-image
+      height: 134px
+      margin-right: 0
+
+    &-title
+      font-size: 16px
+      margin-block: 23px
+
+    &-description
+      font-size: 14px
+      line-height: 20px
